      Changes:
      + 1027-render-check-request-size-before-reading-it-CVE.full.patch
  * Security fixes:
    - X.Org CVE-2014-8100:
      v3: port to NXrender.c rather than render.c (Mike DePaulo)
      v4: backport v3 to nx-libs 3.5.0.x (Mihai Moldovan)
      Changes:
      + 1028-render-unvalidated-lengths-in-Render-extn.-swap.full.patch

  [ Bernard Cafarelli ]
  * nx-X11: link to libdl to fix undefined references to 'dlopen' and 'dlsym'.
    Fixes: #853.
    v2: generally link to libdl in all of nx-X11. (Mike Gabriel)
    Adds:
    - 0630_nx-X11_fix-underlinking-dlopen-dlsym.full.patch

  [ Mike Gabriel ]
  * Security fixes:
    - X.Org CVE-2013-7439:
      1200-CVE-2013-7439-MakeBigReq-don-t-move-the-last-wo.full.patch
  * nx-X11: Prevent underlinking by linking to libNX_X{11,damage,fixes).
    Adds:
    - 0640_nx-X11_fix-underlinking-libNX_Xcomposite_damage_fixes.full.patch
  * nxcompshad: Prevent underlinking by linking to libNX_Xext.
    Adds:
    - 0650_nxcompshad_link-to-NX_Xext.full.patch
  * Security fixes:
    - X.Org CVE-2015-3418:
      1210-CVE-2015-3418-dix-Allow-zero-height-PutImage-re.full.patch
  * debian/roll-tarball.sh:
    + Make sure *.keyboard, debian/**, nx-libs.spec, .pc/** don't end up
      in tarball (special focus on the nx-libs-lite tarball).
    + Allow patch files names having a dash next to the four digits (i.e.,
      1234-<patchname>.<suffix>).
    + Support tarring up the HEAD of the current branch.
  * debian/COPYING.full+lite:
    + Replace content with GPL-2 license text, because that is the overall
      (i.e., strictest) license we have to deal with in nx-libs.
  * Add 9900-dxpc-license-history.full+lite.patch. Document license history of
    DXPC (where nxcomp got forked from).
    Backported from Arctica GH 3.6.x branch.

  [ Nito Martinez ]
  * nxcomp: fix DEBUG, TEST, DUMP, FLUSH, TOKEN, PING, MIXED et al builds.
    Adds:
    - 0992_fix-DEBUG-TEST-DUMP-FLUSH-TOKEN-PING-et-al-builds.full+lite.patch
