@@ -3889,9 +3889,9 @@ index 0095eaa..5d53524 100644
 -are copyright of NoMachine. Redistribution and use of the present\n\
 -software is allowed according to terms specified in the file LICENSE\n\
 -which comes in the source distribution.\n\
-+are copyright of NoMachine. Redistribution (modified or unmodified) and
-+use of the present\n\ software is allowed according to terms specified in
-+the file LICENSE\n\ which comes in the source distribution.\n\
++are copyright of NoMachine. Redistribution (modified or unmodified) and\n\
++use of the present software is allowed according to terms specified in\n\
++the file LICENSE which comes in the source distribution.\n\
  \n\
  Check http://www.nomachine.com/licensing.html for applicability.\n\
  \n\
